...
         - Parameter type: Type of a section
         - Returns: An emoji string
         */
        static func emojiFromSectionType(_ type: String?) -> String {
            if let sectionType = type {
                switch sectionType {
                case "Lecture":
                    return "🗣"
                case "Laboratory":
                    return "🔬"
                case "Recitation":
                    return "✏️"
                default:
...
