...
        addSubview(searchBar)
    }

    private func setupSearchButton() {
        searchButton.translatesAutoresizingMaskIntoConstraints = false
        searchButton.addTarget(self, action: #selector(HomeView.searchClicked(_:)), for: .touchUpInside)
        searchButton.setTitle("Search for classes...", for: UIControlState())
        searchButton.setTitleColor(.black, for: .normal)
        searchButton.backgroundColor = Theme.Color.searchBar.uicolor
        searchButton.layer.cornerRadius = 4
        addSubview(searchButton)
    }

...
